[project]
name = "prefect-workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.28.1", "pip>=25.0.1", "prefect-sqlalchemy==0.4.4"]
[tool.setuptools.packages.find]
include = ["flows*", "shared*"]
exclude = ["tests*", "docs*", "docker*", "deploy*"]
